--- a/index.html
+++ b/index.html
@@ -51,9 +51,9 @@
 
       <nav id="navmenu" class="navmenu">
         <ul>
-          <li><a href="#hero" class="active">Halaman Depan</a></li>
-          <li><a href="#about">Tentang Elektronika</a></li>
-          <li><a href="#services">Materi Elektronika</a></li>
+          <li><a href="index.html#hero" class="active">Halaman Depan</a></li>
+          <li><a href="index.html#about">Tentang Elektronika</a></li>
+          <li><a href="index.html#services">Materi Elektronika</a></li>
           <li><a href="product.html">Hasil Karya Siswa</a></li>
           <li><a href="team.html">Team Elektronika</a></li>
           <!-- <li class="dropdown"><a href="#"><span>Dropdown</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
