--- a/team.html
+++ b/team.html
@@ -51,11 +51,11 @@
 
       <nav id="navmenu" class="navmenu">
         <ul>
-          <li><a href="#hero" class="active">Halaman Depan</a></li>
-          <li><a href="#about">Tentang Elektronika</a></li>
-          <li><a href="#services">Materi Elektronika</a></li>
-          <li><a href="#portfolio">Hasil Karya Siswa</a></li>
-          <li><a href="#team">Team Elektronika</a></li>
+          <li><a href="index.html#hero" class="active">Halaman Depan</a></li>
+          <li><a href="index.html#about">Tentang Elektronika</a></li>
+          <li><a href="index.html#services">Materi Elektronika</a></li>
+          <li><a href="product.html">Hasil Karya Siswa</a></li>
+          <li><a href="team.html">Team Elektronika</a></li>
           <!-- <li class="dropdown"><a href="#"><span>Dropdown</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
             <ul>
               <li><a href="#">Dropdown 1</a></li>
