--- a/product.html
+++ b/product.html
@@ -54,8 +54,8 @@
           <li><a href="index.html#hero" class="active">Halaman Depan</a></li>
           <li><a href="index.html#about">Tentang Elektronika</a></li>
           <li><a href="index.html#services">Materi Elektronika</a></li>
-          <li><a href="product.html">Hasil Karya Siswa</a></li>
-          <li><a href="team.html">Team Elektronika</a></li>
+          <li><a href="product.html#product">Hasil Karya Siswa</a></li>
+          <li><a href="team.html#team">Team Elektronika</a></li>
           <!-- <li class="dropdown"><a href="#"><span>Dropdown</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
             <ul>
               <li><a href="#">Dropdown 1</a></li>
@@ -88,17 +88,9 @@
     <!-- Hero Section -->
     <section id="hero" class="hero section dark-background">
 
-      <img src="assets/img/hero-bg.jpg" alt="" data-aos="fade-in">
+      <img src="assets/img/team.jpg" alt="" data-aos="fade-in">
 
-      <div class="container d-flex flex-column align-items-center">
-        <h2 data-aos="fade-up" data-aos-delay="100">PLAN. LAUNCH. GROW.</h2>
-        <p data-aos="fade-up" data-aos-delay="200">Dari Rangkaian Sederhana Menuju Teknologi Masa Depan.</p>
-        <div class="d-flex mt-4" data-aos="fade-up" data-aos-delay="300">
-          <a href="#about" class="btn-get-started">Get Started</a>
-          <a href="https://www.youtube.com/watch?v=r-X9coYTOV4&list=PLah6faXAgguOeMUIxS22ZU4w5nDvCl5gs"
-            class="glightbox btn-watch-video d-flex align-items-center"><i class="bi bi-play-circle"></i><span>Watch
-              Video</span></a>
-        </div>
+      
       </div>
 
     </section><!-- /Hero Section -->
@@ -106,7 +98,7 @@
 
 
     <!-- Portfolio Section -->
-    <section id="portfolio" class="portfolio section">
+    <section id="product" class="portfolio section">
 
       <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
