--- a/team.html
+++ b/team.html
@@ -146,6 +146,22 @@
 
           <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="300">
             <div class="member">
+              <div class="pic"><img src="assets/img/team/team-11.jpg" class="img-fluid" alt=""></div>
+              <div class="member-info">
+                <h4>Heni Triwiningsih, S.Pd.T.                </h4>
+                <span>Guru</span>
+                <div class="social">
+                  <a href=""><i class="bi bi-twitter-x"></i></a>
+                  <a href=""><i class="bi bi-facebook"></i></a>
+                  <a href=""><i class="bi bi-instagram"></i></a>
+                  <a href=""><i class="bi bi-linkedin"></i></a>
+                </div>
+              </div>
+            </div>
+          </div><!-- End Team Member -->
+
+          <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="300">
+            <div class="member">
               <div class="pic"><img src="assets/img/team/team-3.jpg" class="img-fluid" alt=""></div>
               <div class="member-info">
                 <h4>Khoirul Putro Romadhon, S.Pd</h4>
@@ -165,7 +181,7 @@
               <div class="pic"><img src="assets/img/team/team-7.jpg" class="img-fluid" alt=""></div>
               <div class="member-info">
                 <h4>Yoga Budi Santosa, SST</h4>
-                <span>Manager Sertifikasi</span>
+                <span>Guru</span>
                 <div class="social">
                   <a href=""><i class="bi bi-twitter-x"></i></a>
                   <a href=""><i class="bi bi-facebook"></i></a>
@@ -181,7 +197,7 @@
               <div class="pic"><img src="assets/img/team/team-8.jpg" class="img-fluid" alt=""></div>
               <div class="member-info">
                 <h4>Wakijan, SST</h4>
-                <span>Manager Sertifikasi</span>
+                <span>Guru</span>
                 <div class="social">
                   <a href=""><i class="bi bi-twitter-x"></i></a>
                   <a href=""><i class="bi bi-facebook"></i></a>
@@ -197,7 +213,7 @@
               <div class="pic"><img src="assets/img/team/team-10.jpg" class="img-fluid" alt=""></div>
               <div class="member-info">
                 <h4>Drs. Hadi Agus Sulistyono, M.Si</h4>
-                <span>Manager Sertifikasi</span>
+                <span>Bendahara Jurusan</span>
                 <div class="social">
                   <a href=""><i class="bi bi-twitter-x"></i></a>
                   <a href=""><i class="bi bi-facebook"></i></a>
@@ -213,7 +229,7 @@
               <div class="pic"><img src="assets/img/team/team-4.jpg" class="img-fluid" alt=""></div>
               <div class="member-info">
                 <h4>Suharyanto, SST</h4>
-                <span>Manager Sertifikasi</span>
+                <span>Guru</span>
                 <div class="social">
                   <a href=""><i class="bi bi-twitter-x"></i></a>
                   <a href=""><i class="bi bi-facebook"></i></a>
@@ -229,7 +245,7 @@
               <div class="pic"><img src="assets/img/team/team-5.jpg" class="img-fluid" alt=""></div>
               <div class="member-info">
                 <h4>Muhamad Taufik, S.Pd</h4>
-                <span>Manager Sertifikasi</span>
+                <span>Manager USMAN</span>
                 <div class="social">
                   <a href=""><i class="bi bi-twitter-x"></i></a>
                   <a href=""><i class="bi bi-facebook"></i></a>
