--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
         <p data-aos="fade-up" data-aos-delay="200">Dari Rangkaian Sederhana Menuju Teknologi Masa Depan.</p>
         <div class="d-flex mt-4" data-aos="fade-up" data-aos-delay="300">
           <a href="#about" class="btn-get-started">Get Started</a>
-          <a href="https://youtu.be/t3EsJMT6bjE"
+          <a href="https://youtu.be/meh53HMnnpM"
             class="glightbox btn-watch-video d-flex align-items-center"><i class="bi bi-play-circle"></i><span>Watch
               Video</span></a>
         </div>
@@ -196,7 +196,7 @@
 
               <div class="position-relative mt-4">
                 <img src="assets/img/about-2.jpg" class="img-fluid rounded-4" alt="">
-                <a href="https://youtu.be/WIWbVWP4ZWg" class="glightbox pulsating-play-btn"></a>
+                <a href="https://youtu.be/meh53HMnnpM"class="glightbox pulsating-play-btn"></a>
               </div>
             </div>
           </div>
