--- a/product.html
+++ b/product.html
@@ -127,7 +127,7 @@
                   
                   <a href="assets/img/portfolio/app-1.jpg" title="" data-gallery="portfolio-gallery-app"
                     class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
-                  <a href="portfolio-details.html" title="More Details" class="glightbox pulsating-play-btn"><i
+                  <a href="https://youtu.be/WIWbVWP4ZWg" title="More Details" class="glightbox pulsating-play-btn"><i
                      ></i></a>
                 </div>
               </div>
