--- a/index.html
+++ b/index.html
@@ -56,6 +56,7 @@
           <li><a href="index.html#services">Materi Elektronika</a></li>
           <li><a href="product.html#product">Hasil Karya Siswa</a></li>
           <li><a href="team.html#team">Team Elektronika</a></li>
+          <li><a href="pinjam.html#alat">Peminjaman Alat</a></li>
           <!-- <li class="dropdown"><a href="#"><span>Dropdown</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
             <ul>
               <li><a href="#">Dropdown 1</a></li>
