--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
   <title>ELEKTRONIKA</title>
   <meta name="description" content="">
   <meta name="keywords" content="">
+  import { Analytics } from '@vercel/analytics/next';
+  <link rel="import" href="@vercel/analytics/next">
 
   <!-- Favicons -->
   <link href="assets/img/favicon.png" rel="icon">
