--- a/index.html
+++ b/index.html
@@ -617,7 +617,7 @@
 			</div> -->
         </div>
       </div>
-
+    <section>
       <div class="container">
 
         <div class="row gy-4">
@@ -626,14 +626,14 @@
             <div class="service-item d-flex position-relative h-100">
               <i class="bi bi-briefcase icon flex-shrink-0"></i>
               <div>
-                <h4 class="title"><a href="#" class="stretched-link">Industri dan Perkembangan Terkini</a></h4>
+                <h4 class="title"><a href="news1.html" class="stretched-link">Industri dan Perkembangan Terkini</a></h4>
                 <p class="blog-meta">
                   <span class="author"><i class="fas fa-user"></i> Admin</span>
                   <span class="date"><i class="fas fa-calendar"></i> 27 Agustus, 2025</span>
                 </p>
                 <p class="description">Selma dan Informa Electronics terus memperluas wilayah jangkauan mereka dengan
                   membuka cabang di Kota Semarang.</p>
-                <a href="single-news.html" class="read-more-btn">read more <i class="fas fa-angle-right"></i></a>
+                <a href="news1.html" class="read-more-btn">read more <i class="fas fa-angle-right"></i></a>
               </div>
             </div>
           </div><!-- End Service Item -->
@@ -642,14 +642,14 @@
             <div class="service-item d-flex position-relative h-100">
               <i class="bi bi-card-checklist icon flex-shrink-0"></i>
               <div>
-                <h4 class="title"><a href="#" class="stretched-link">Industri dan Perkembangan Terkini</a></h4>
+                <h4 class="title"><a href="news1.html" class="stretched-link">Industri dan Perkembangan Terkini</a></h4>
                 <p class="blog-meta">
                   <span class="author"><i class="fas fa-user"></i> Admin</span>
                   <span class="date"><i class="fas fa-calendar"></i> 13 Agustus, 2025</span>
                 </p>
                 <p class="description">AQUA Elektronik meluncurkan inovasi produk baru pada 13 Agustus 2025. Rincian.
                 </p>
-                <a href="single-news.html" class="read-more-btn">read more <i class="fas fa-angle-right"></i></a>
+                <a href="news1.html" class="read-more-btn">read more <i class="fas fa-angle-right"></i></a>
               </div>
             </div>
           </div><!-- End Service Item -->
@@ -658,13 +658,13 @@
             <div class="service-item d-flex position-relative h-100">
               <i class="bi bi-bar-chart icon flex-shrink-0"></i>
               <div>
-                <h4 class="title"><a href="#" class="stretched-link">Regulasi & Kepastian Industri</a></h4>
+                <h4 class="title"><a href="news1.html" class="stretched-link">Regulasi & Kepastian Industri</a></h4>
                 <p class="blog-meta">
                   <span class="author"><i class="fas fa-user"></i> Admin</span>
                   <span class="date"><i class="fas fa-calendar"></i> 11 Agustus, 2025</span>
                 </p>
                 <p class="description">MODENA memperkenalkan Seamless Go, layanan langganan</p>
-                <a href="single-news.html" class="read-more-btn">read more <i class="fas fa-angle-right"></i></a>
+                <a href="news1.html" class="read-more-btn">read more <i class="fas fa-angle-right"></i></a>
               </div>
             </div>
           </div><!-- End Service Item -->
@@ -673,14 +673,14 @@
             <div class="service-item d-flex position-relative h-100">
               <i class="bi bi-binoculars icon flex-shrink-0"></i>
               <div>
-                <h4 class="title"><a href="#" class="stretched-link">Regulasi & Kepastian Industri</a></h4>
+                <h4 class="title"><a href="news1.html" class="stretched-link">Regulasi & Kepastian Industri</a></h4>
                 <p class="blog-meta">
                   <span class="author"><i class="fas fa-user"></i> Admin</span>
                   <span class="date"><i class="fas fa-calendar"></i> 10 Agustus, 2025</span>
                 </p>
                 <p class="description">Perprindo (Perkumpulan Perusahaan Pendingin Refrigerasi Indonesia) aktif
                   mengedukasi industri mengenai implementasi Permenperin No. 7/2025</p>
-                <a href="single-news.html" class="read-more-btn">read more <i class="fas fa-angle-right"></i></a>
+                <a href="news1.html" class="read-more-btn">read more <i class="fas fa-angle-right"></i></a>
               </div>
             </div>
           </div><!-- End Service Item -->
@@ -689,14 +689,14 @@
             <div class="service-item d-flex position-relative h-100">
               <i class="bi bi-brightness-high icon flex-shrink-0"></i>
               <div>
-                <h4 class="title"><a href="#" class="stretched-link">Investasi dan Ekspansi Produksi</a></h4>
+                <h4 class="title"><a href="news1.html" class="stretched-link">Investasi dan Ekspansi Produksi</a></h4>
                 <p class="blog-meta">
                   <span class="author"><i class="fas fa-user"></i> Admin</span>
                   <span class="date"><i class="fas fa-calendar"></i> 09 Agustus, 2025</span>
                 </p>
                 <p class="description">Dari sisi investasi, PT Daikin (pabrik AC Jepang) menyuntikkan modal ke industri
                   elektronik Indonesia.</p>
-                <a href="single-news.html" class="read-more-btn">read more <i class="fas fa-angle-right"></i></a>
+                <a href="news1.html" class="read-more-btn">read more <i class="fas fa-angle-right"></i></a>
               </div>
             </div>
           </div><!-- End Service Item -->
@@ -705,13 +705,13 @@
             <div class="service-item d-flex position-relative h-100">
               <i class="bi bi-calendar4-week icon flex-shrink-0"></i>
               <div>
-                <h4 class="title"><a href="#" class="stretched-link">Investasi dan Ekspansi Produksi</a></h4>
+                <h4 class="title"><a href="news1.html" class="stretched-link">Investasi dan Ekspansi Produksi</a></h4>
                 <p class="blog-meta">
                   <span class="author"><i class="fas fa-user"></i> Admin</span>
                   <span class="date"><i class="fas fa-calendar"></i> 07 Agustus, 2025</span>
                 </p>
                 <p class="description">Meskipun sempat muncul kabar tentang PHK massal di Panasonic Holdings,</p>
-                <a href="single-news.html" class="read-more-btn">read more <i class="fas fa-angle-right"></i></a>
+                <a href="news1.html" class="read-more-btn">read more <i class="fas fa-angle-right"></i></a>
               </div>
 
             </div>
@@ -722,7 +722,7 @@
         </div>
         <div class="row">
           <div class="col-lg-12 text-center">
-            <a href="news.html" class="boxed-btn">More News</a>
+            <a href="news1.html" class="boxed-btn">More News</a>
           </div>
 
         </div>
