--- a/pkl.html
+++ b/pkl.html
@@ -104,8 +104,8 @@
 
       <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
-        <h2>Hasil Karya</h2>
-        <p>Lihat Hasil Karya Kami</p>
+        <h2>Praktik Kerja Lapangan</h2>
+        <p>Lihat Praktik Kerja Lapangan Kami</p>
       </div><!-- End Section Title -->
 
       <div class="container">
