--- a/news1.html
+++ b/news1.html
@@ -56,6 +56,7 @@
           <li><a href="index.html#about">Tentang Elektronika</a></li>
           <li><a href="index.html#services">Materi Elektronika</a></li>
           <li><a href="product.html#product">Hasil Karya Siswa</a></li>
+          <li><a href="pkl.html#product">Praktik Kerja Lapangan</a></li>
           <li><a href="team.html#team">Team Elektronika</a></li>
           <li><a href="pinjam.html#alat">Peminjaman Alat</a></li>
 
