--- a/news1.html
+++ b/news1.html
@@ -56,9 +56,9 @@
           <li><a href="index.html#about">Tentang Elektronika</a></li>
           <li><a href="index.html#services">Materi Elektronika</a></li>
           <li><a href="product.html#product">Hasil Karya Siswa</a></li>
-          <li><a href="pkl.html#product">Praktik Kerja Lapangan</a></li>
+          <li><a href="pkl.html#pkl">Praktik Kerja Lapangan</a></li>
           <li><a href="team.html#team">Team Elektronika</a></li>
-          <li><a href="pinjam.html#pkl">Peminjaman Alat</a></li>
+          <li><a href="pinjam.html#alat">Peminjaman Alat</a></li>
 
         </ul>
         <i class="mobile-nav-toggle d-xl-none bi bi-list"></i>
