--- a/product.html
+++ b/product.html
@@ -55,7 +55,7 @@
           <li><a href="index.html#about">Tentang Elektronika</a></li>
           <li><a href="index.html#services">Materi Elektronika</a></li>
           <li><a href="product.html#product">Hasil Karya Siswa</a></li>
-          <li><a href="pkl.html#product">Praktik Kerja Lapangan</a></li>
+          <li><a href="pkl.html#pkl">Praktik Kerja Lapangan</a></li>
           <li><a href="team.html#team">Team Elektronika</a></li>
           <li><a href="pinjam.html#pkl">Peminjaman Alat</a></li>
           <!-- <li class="dropdown"><a href="#"><span>Dropdown</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
