--- a/pinjam.html
+++ b/pinjam.html
@@ -88,7 +88,7 @@
   <main class="main">
 
     <!-- Hero Section -->
-    <section id="hero" class="hero section dark-background">
+    <section id="her" class="hero section dark-background">
 
       <img src="assets/img/team1.jpg" alt="" data-aos="fade-in">
 
