--- a/news.html
+++ b/news.html
@@ -108,7 +108,7 @@
           <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
             <h3>Program Keahlian Elektronika</h3>
             <img src="assets/img/about.jpg" class="img-fluid rounded-4 mb-4" alt="">
-            <p>Program Keahlian Elektronika adalah bidang studi dalam rumpun teknik (engineering) yang mempelajari teori, prinsip, desain, dan aplikasi dari perangkat serta sistem elektronika. Jurusan ini biasanya ada di SMK (Sekolah Menengah Kejuruan), Politeknik, maupun Perguruan Tinggi dengan fokus yang berbeda-beda. Berikut penjelasan secara terperinci:</p>
+            <p align="justify">Program Keahlian Elektronika adalah bidang studi dalam rumpun teknik (engineering) yang mempelajari teori, prinsip, desain, dan aplikasi dari perangkat serta sistem elektronika. Jurusan ini biasanya ada di SMK (Sekolah Menengah Kejuruan), Politeknik, maupun Perguruan Tinggi dengan fokus yang berbeda-beda. Berikut penjelasan secara terperinci:</p>
             <p>1. Pengertian Elektronika
 
                 Elektronika adalah cabang ilmu yang mempelajari penggunaan arus listrik kecil untuk mengendalikan, memproses, dan mentransmisikan informasi. Bedanya dengan listrik murni (elektro tenaga), elektronika lebih fokus pada komponen aktif (seperti transistor, IC, dioda) dibanding sekadar penghantaran daya.</p>
@@ -392,7 +392,7 @@
             <div class="row">
               <div class="col-lg-6 order-2 order-lg-1 mt-3 mt-lg-0">
                 <h3>Program Guru Tamu.</h3>
-                <p class="fst-italic">
+                <p align="justify" class="fst-italic">
                   Program Guru Tamu adalah kegiatan pembelajaran di mana sekolah menghadirkan praktisi, ahli, atau tenaga profesional dari industri/instansi terkait untuk berbagi pengetahuan, pengalaman, dan keterampilan kepada siswa.
                   Di jurusan Elektronika, program ini menjadi jembatan antara teori di sekolah dengan praktik nyata di dunia industri.
                 </p>
@@ -408,7 +408,7 @@
                   <li><i class="bi bi-check2-all"></i> <span>Meningkatkan kompetensi guru melalui transfer pengetahuan dari praktisi.</span></li>
                 
                 </ul>
-                <p>
+                <p align="justify">
                   Program Guru Tamu di jurusan Elektronika adalah wadah penting untuk menghubungkan pembelajaran di sekolah dengan kebutuhan industri, sehingga siswa tidak hanya terampil di teori tetapi juga siap kerja dan berdaya saing tinggi.
                 </p>
               </div>
@@ -422,7 +422,7 @@
             <div class="row">
               <div class="col-lg-6 order-2 order-lg-1 mt-3 mt-lg-0">
                 <h3>Neque exercitationem debitis soluta quos debitis quo mollitia officia est</h3>
-                <p>
+                <p align="justify">
                   Ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate
                   velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
                   culpa qui officia deserunt mollit anim id est laborum
