--- a/news1.html
+++ b/news1.html
@@ -101,14 +101,14 @@
           <img src="assets/img/services.jpg" alt="" class="img-fluid services-img">
           <h3>Selma dan Informa Electronics terus melakukan ekspansi bisnis dengan membuka gerai baru, yang terakhir di
             Artos Mall, Magelang</h3>
-          <p>
+          <p class="MsoNormal" style="text-align: justify; text-indent: 0.5in;">
             Selma dan Informa Electronics terus melakukan ekspansi bisnis dengan membuka gerai baru, yang terakhir di
             Artos Mall, Magelang, pada 24 Juli 2025, untuk menyediakan solusi lengkap kebutuhan rumah tangga dan
             elektronik dalam satu tempat melalui konsep one stop shopping. Ekspansi ini bertujuan menjangkau pasar yang
             lebih luas, meningkatkan daya saing, serta mengoptimalkan strategi omnichannel dan layanan pembiayaan untuk
             memenuhi kebutuhan konsumen modern.
           </p>
-          <p>
+          <p class="MsoNormal" style="text-align: justify; text-indent: 0.5in;">
 
             Dukungan terhadap Ekspansi Bisnis
             Konsep Kolaborasi:
@@ -119,7 +119,7 @@
             berbagai opsi pembayaran non-tunai seperti cicilan dan leasing untuk menjangkau segmen pasar yang lebih
             luas.
           </p>
-          <p>
+          <p class="MsoNormal" style="text-align: justify; text-indent: 0.5in;">
             Pengembangan Produk Merek Sendiri:
             Selain merek ternama, Kawan Lama Group juga menghadirkan merek internal seperti KELS yang menyediakan produk
             elektronik dengan desain modern, minimalis, dan multifungsi untuk melengkapi penawaran di toko-toko mereka,
