--- a/pinjam.html
+++ b/pinjam.html
@@ -57,30 +57,10 @@
           <li><a href="product.html#product">Hasil Karya Siswa</a></li>
           <li><a href="pkl.html#pkl">Praktik Kerja Lapangan</a></li>
           <li><a href="team.html#team">Team Elektronika</a></li>
-          <li><a href="pinjam.html#alat">Peminjaman Alat</a></li>
-          <!-- <li class="dropdown"><a href="#"><span>Dropdown</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
-            <ul>
-              <li><a href="#">Dropdown 1</a></li>
-              <li class="dropdown"><a href="#"><span>Deep Dropdown</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
-                <ul>
-                  <li><a href="#">Deep Dropdown 1</a></li>
-                  <li><a href="#">Deep Dropdown 2</a></li>
-                  <li><a href="#">Deep Dropdown 3</a></li>
-                  <li><a href="#">Deep Dropdown 4</a></li>
-                  <li><a href="#">Deep Dropdown 5</a></li>
-                </ul>
-              </li>
-              <li><a href="#">Dropdown 2</a></li>
-              <li><a href="#">Dropdown 3</a></li>
-              <li><a href="#">Dropdown 4</a></li>
-            </ul>
-          </li> -->
-          <!-- <li><a href="#contact">Contact</a></li> -->
-        </ul>
+          <li><a href="pinjam.html#alat" class="active">Peminjaman Alat</a></li>
+        
         <i class="mobile-nav-toggle d-xl-none bi bi-list"></i>
       </nav>
-
-      <!-- <a class="cta-btn" href="index.html#about">Get Started</a> -->
 
     </div>
   </header>
@@ -105,9 +85,9 @@
         <!-- Table -->
        <div class="container" data-aos="fade-up" data-aos-delay="100">  
       <div class="card-body p-0">
-      <div class="table-responsive-lg">
+      <div class="table-responsive-lg ">
         
-      <table class="table align-middle table-striped table-sm table-dark ">
+      <table class="table align-middle table-striped table-sm table-dark table-rounded">
           <thead id="table-head"></thead>
           <tbody id="table-body"></tbody>
         </table>
