--- a/pinjam.html
+++ b/pinjam.html
@@ -51,13 +51,13 @@
 
       <nav id="navmenu" class="navmenu">
         <ul>
-          <li><a href="index.html#hero" class="active">Halaman Depan</a></li>
+          <li><a href="index.html#hero" >Halaman Depan</a></li>
           <li><a href="index.html#about">Tentang Elektronika</a></li>
           <li><a href="index.html#services">Materi Elektronika</a></li>
           <li><a href="product.html#product">Hasil Karya Siswa</a></li>
           <li><a href="pkl.html#pkl">Praktik Kerja Lapangan</a></li>
           <li><a href="team.html#team">Team Elektronika</a></li>
-          <li><a href="pinjam.html#alat" class="active">Peminjaman Alat</a></li>
+          <li><a href="pinjam.html#alat"class="active">Peminjaman Alat</a></li>
         
         <i class="mobile-nav-toggle d-xl-none bi bi-list"></i>
       </nav>
