--- a/index.html
+++ b/index.html
@@ -584,8 +584,7 @@
           <div class="row">
             <div class="col-lg-8 offset-lg-2 text-center">
               <div class="section-title">
-                <p class="MsoNormal" style="text-align: justify; text-indent: 0.5in;">Berikut update terbaru seputar
-                  kabar elektronik di Indonesia per bulan Agustus 2025:</p>
+                <p >Kabar elektronik di Indonesia per bulan Agustus 2025:</p>
               </div>
             </div>
           </div>
