--- a/news.html
+++ b/news.html
@@ -1186,11 +1186,13 @@
         <div class="col-lg-2 col-md-3 footer-links">
           <h4>Useful Links</h4>
           <ul>
-            <li><i class="bi bi-chevron-right"></i> <a href="#">Home</a></li>
-            <li><i class="bi bi-chevron-right"></i> <a href="#">About us</a></li>
-            <li><i class="bi bi-chevron-right"></i> <a href="#">Services</a></li>
-            <li><i class="bi bi-chevron-right"></i> <a href="#">Terms of service</a></li>
-            <li><i class="bi bi-chevron-right"></i> <a href="#">Privacy policy</a></li>
+            <li><i class="bi bi-chevron-right"></i> <a href="index.html#hero" >Halaman Depan</a></li>
+            <li><i class="bi bi-chevron-right"></i> <a href="index.html#about">Tentang Elektronika</a></li>
+            <li><i class="bi bi-chevron-right"></i> <a href="index.html#services">Materi Elektronika</a></li>
+            <li><i class="bi bi-chevron-right"></i> <a href="product.html#product">Hasil Karya Siswa</a></li>
+            <li><i class="bi bi-chevron-right"></i> <a href="pkl.html#pkl">Praktik Kerja Lapangan</a></li>
+            <li><i class="bi bi-chevron-right"></i> <a href="team.html#team">Team Elektronika</a></li>
+            <li><i class="bi bi-chevron-right"></i> <a href="pinjam.html#alat">Peminjaman Alat</a></li>
           </ul>
         </div>
 
@@ -1227,6 +1229,10 @@
         <!-- Licensing information: https://bootstrapmade.com/license/ -->
         <!-- Purchase the pro version with working PHP/AJAX contact form: [buy-url] -->
         Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a> Distributed by <a href=“https://themewagon.com>ThemeWagon
+        </a> 
+        </div>
+        <div class="edit">
+          Edited by <a href="https://krido19.github.io/cv/">Krido</a> 
       </div>
     </div>
 
