--- a/news1.html
+++ b/news1.html
@@ -176,7 +176,7 @@
           </ul>
         </div>
 
-        <div class="col-lg-2 col-md-3 footer-links">
+        <!-- <div class="col-lg-2 col-md-3 footer-links">
           <h4>Our Services</h4>
           <ul>
             <li><i class="bi bi-chevron-right"></i> <a href="#">Web Design</a></li>
@@ -185,7 +185,7 @@
             <li><i class="bi bi-chevron-right"></i> <a href="#">Marketing</a></li>
             <li><i class="bi bi-chevron-right"></i> <a href="#">Graphic Design</a></li>
           </ul>
-        </div>
+        </div> -->
 
         <div class="col-lg-4 col-md-12 footer-newsletter">
           <h4>Our Newsletter</h4>
