--- a/gerbang-dash.html
+++ b/gerbang-dash.html
@@ -131,8 +131,9 @@
               </table>
             </div>
           </div>
-          
+          <div class="d-flex mt-4" data-aos="fade-up" data-aos-delay="300">
           <a href="gerbang.html#gerbangadmin" class="btn-get-started">Admin Kartu </a>
+        </div>
         </div>
         
       </div>
