--- a/gerbang.html
+++ b/gerbang.html
@@ -142,8 +142,10 @@
               </table>
             </div>
           </div>
+          <div class="d-flex mt-4" data-aos="fade-up" data-aos-delay="300 align-items-center ">
           
-          <a href="gerbang-dash.html#gerbangdash" class="btn-get-started">Log Kartu </a>
+          <a href="gerbang-dash.html#gerbangdash" class="btn-get-started ">Log Kartu </a>
+        </div>
         </div>
       </div>
 
