--- a/index.html
+++ b/index.html
@@ -120,12 +120,12 @@
               teori, prinsip, desain, dan aplikasi dari perangkat serta sistem elektronika. Jurusan ini biasanya ada di
               SMK (Sekolah Menengah Kejuruan), Politeknik, maupun Perguruan Tinggi dengan fokus yang berbeda-beda.
               Berikut penjelasan secara terperinci:</p>
-            <p >1. Pengertian Elektronika
+            <p class="MsoNormal" style="text-align: justify; text-indent: 0.5in;">1. Pengertian Elektronika
 
               Elektronika adalah cabang ilmu yang mempelajari penggunaan arus listrik kecil untuk mengendalikan,
               memproses, dan mentransmisikan informasi. Bedanya dengan listrik murni (elektro tenaga), elektronika lebih
               fokus pada komponen aktif (seperti transistor, IC, dioda) dibanding sekadar penghantaran daya.</p>
-            <p >2. Ruang Lingkup yang Dipelajari
+            <p class="MsoNormal" style="text-align: justify; text-indent: 0.5in;">2. Ruang Lingkup yang Dipelajari
 
               Mahasiswa atau siswa jurusan elektronika akan mempelajari:
               <ul>
@@ -148,7 +148,7 @@
                 </span></li>
               </ul>
           </ul>
-            <p >3. Bidang Keahlian
+            <p class="MsoNormal" style="text-align: justify; text-indent: 0.5in;">3. Bidang Keahlian
               
 
               Jurusan elektronika biasanya memiliki konsentrasi:
@@ -164,7 +164,7 @@
                 </span></li>
                </ul>
             </ul>
-            <p >4. Keterampilan yang Dikembangkan
+            <p class="MsoNormal" style="text-align: justify; text-indent: 0.5in;">4. Keterampilan yang Dikembangkan
 
               Lulusan jurusan elektronika biasanya memiliki keterampilan:
             <ul>
@@ -179,7 +179,7 @@
                 </span></li>
             </ul>
           </ul>
-            <p >5. Peluang Karier
+            <p class="MsoNormal" style="text-align: justify; text-indent: 0.5in;" >5. Peluang Karier
 
               Lulusan jurusan elektronika dapat bekerja sebagai:
             <ul>
