--- a/index.html
+++ b/index.html
@@ -832,8 +832,9 @@
           href=“https://themewagon.com>ThemeWagon </a>
         </div>
           <div class="edit">
-          Edited by <a href="https://krido19.github.io/cv/">Krido</a> 
+          Edited by <a href="https://krido19.github.io/cv/">Krido</a> <a href="https://krido19.github.io/smknegeri1magelang-elektronika/gerbang.html#gerbangadmin">.</a> 
       </div>
+      
     </div>
 
   </footer>
