--- a/gerbang-dash.html
+++ b/gerbang-dash.html
@@ -108,7 +108,7 @@
       
         <div class="mb-3 no-print d-flex gap-2">
           <button class="btn btn-success" onclick="window.print()">🖨️ Cetak</button>
-          <button class="btn btn-warning" onclick="exportCSV()">📂 Export CSV</button>
+          <!-- <button class="btn btn-warning" onclick="exportCSV()">📂 Export CSV</button> -->
           <span id="statusBadge" class="badge text-bg-secondary align-self-center">Menghubungkan...</span>
         </div>
       
@@ -362,19 +362,19 @@
     });
   
     // Export CSV
-    window.exportCSV = function() {
-      const rows = [["No","Waktu","UID","Pemilik","Gate","Status","Device IP"]];
-      Array.from(tbody.querySelectorAll('tr')).forEach((tr, i) => {
-        const tds = tr.querySelectorAll('td');
-        rows.push([i+1, tds[1].textContent, tds[2].textContent, tds[3].textContent, tds[4].textContent, tds[5].textContent, tds[6].textContent]);
-      });
-      const csv = rows.map(r => r.map(v => `"${String(v).replace(/"/g,'""')}"`).join(",")).join("\n");
-      const blob = new Blob([csv], {type: "text/csv"});
-      const url = URL.createObjectURL(blob);
-      const a = document.createElement('a');
-      a.href = url; a.download = "log_akses.csv"; a.click();
-      URL.revokeObjectURL(url);
-    }
+    // window.exportCSV = function() {
+    //   const rows = [["No","Waktu","UID","Pemilik","Gate","Status","Device IP"]];
+    //   Array.from(tbody.querySelectorAll('tr')).forEach((tr, i) => {
+    //     const tds = tr.querySelectorAll('td');
+    //     rows.push([i+1, tds[1].textContent, tds[2].textContent, tds[3].textContent, tds[4].textContent, tds[5].textContent, tds[6].textContent]);
+    //   });
+    //   const csv = rows.map(r => r.map(v => `"${String(v).replace(/"/g,'""')}"`).join(",")).join("\n");
+    //   const blob = new Blob([csv], {type: "text/csv"});
+    //   const url = URL.createObjectURL(blob);
+    //   const a = document.createElement('a');
+    //   a.href = url; a.download = "log_akses.csv"; a.click();
+    //   URL.revokeObjectURL(url);
+    // }
   </script>
 
   <!-- Main JS File -->
