--- a/gerbang-dash.html
+++ b/gerbang-dash.html
@@ -107,7 +107,7 @@
         </div>
       
         <div class="mb-3 no-print d-flex gap-2">
-          <button class="btn btn-success" onclick="window.print()">🖨️ Cetak</button>
+          <button class="btn btn-warning" onclick="window.print()">🖨️ Cetak</button>
           <!-- <button class="btn btn-warning" onclick="exportCSV()">📂 Export CSV</button> -->
           <span id="statusBadge" class="badge text-bg-secondary align-self-center">Menghubungkan...</span>
         </div>
