--- a/index.html
+++ b/index.html
@@ -116,12 +116,12 @@
             <h3>Program Keahlian Elektronika</h3>
 
             <img src="assets/img/about.jpg" class="img-fluid rounded-4 mb-4" alt="">
-            <P  class="MsoNormal" style="text-align: center;">VISI</P>
+            <P  class="MsoNormal" style="text-align: center;"><b>VISI</b></P>
             <p class="MsoNormal" style="text-align: justify; text-indent: 0.5in;">“Menjadi program keahlian yang
               unggul, inovatif, dan berdaya saing dalam bidang elektronika audio video dan elektronika industri, serta
               menghasilkan lulusan yang kompeten, berkarakter, dan siap menghadapi perkembangan teknologi global.”
             </p>
-            <P  class="MsoNormal" style="text-align: center;">MISI</P>
+            <P  class="MsoNormal" style="text-align: center;"><b>MISI</b></P>
             <p class="MsoNormal" style="text-align: justify; text-indent: 0.5in;">Menyelenggarakan pendidikan dan pelatihan yang berbasis kompetensi sesuai standar industri di bidang elektronika audio video dan elektronika industri.
 
               Mengembangkan keterampilan peserta didik dalam bidang perakitan, instalasi, pemrograman, perawatan, dan perbaikan sistem elektronika audio video serta elektronika industri.
