--- a/index.html
+++ b/index.html
@@ -317,7 +317,7 @@
                 <div class="icon">
                   <i class="bi bi-activity"></i>
                 </div>
-                <a href="service-details.html" class="stretched-link">
+                <a href="pdf.html#pdf" class="stretched-link">
                   <h3>Besaran Listrik Dasar</h3>
                 </a>
                 <ul>
@@ -344,7 +344,7 @@
                 <div class="icon">
                   <i class="bi bi-broadcast"></i>
                 </div>
-                <a href="service-details.html" class="stretched-link">
+                <a href="pdf.html#pdf" class="stretched-link">
                   <h3>Komponen Pasif</h3>
                 </a>
                 <ul>
@@ -371,7 +371,7 @@
                 <div class="icon">
                   <i class="bi bi-easel"></i>
                 </div>
-                <a href="service-details.html" class="stretched-link">
+                <a href="pdf.html#pdf" class="stretched-link">
                   <h3>Komponen Aktif</h3>
                 </a>
                 <ul>
