--- a/pdf.html
+++ b/pdf.html
@@ -86,8 +86,8 @@
     <div class="container" data-aos="fade-up" data-aos-delay="100">  
       <div class="card-body p-0">
       <div class="table-responsive-lg ">
-        
-        <embed type="application/pdf" src="assets/pdf/pec.pdf" width="900" height="700"></embed>
+        <object data="assets/pdf/pec.pdf" width="500" height="400"></object>
+        <!-- <embed type="application/pdf" src="assets/pdf/pec.pdf" width="900" height="700"></embed> -->
       
       </div>
       </div>
