--- a/pdf.html
+++ b/pdf.html
@@ -86,7 +86,9 @@
     <div class="container" data-aos="fade-up" data-aos-delay="100">  
       <div class="card-body p-0">
       <div class="table-responsive-lg ">
-        <object data="assets/pdf/pec.pdf" width="500" height="400"></object>
+        <!-- <object data="assets/pdf/pec.pdf" width="500" height="400"></object> -->
+        <iframe src="assets/pdf/pec.pdf" width="600" height="400"></iframe>
+
         <!-- <embed type="application/pdf" src="assets/pdf/pec.pdf" width="900" height="700"></embed> -->
       
       </div>
