--- a/pdf.html
+++ b/pdf.html
@@ -86,13 +86,12 @@
     <div class="container" data-aos="fade-up" data-aos-delay="100">  
       <div class="card-body p-0">
       <div class="table-responsive-lg ">
-        <object data="assets/pdf/pec.pdf" type="application/pdf" width="400px" height="400px">
+        <object data="assets/pdf/pec.pdf" type="application/pdf" width="100%" height="200%">
           <p>
-          Your browser does not support PDF files.
-          <a href="assets/pdf/pec.pdf">Download the file instead</a>
-          </p>
-          </object>
-          
+            Your browser does not support PDF files.
+            <a href="assets/pdf/pec.pdf">Download the file instead</a>
+            </p>
+        </object>
         <!-- <object data="assets/pdf/pec.pdf" width="500" height="400"></object>
         <iframe src="assets/pdf/pec.pdf" width="600" height="400"></iframe> -->
 
