--- a/pdf.html
+++ b/pdf.html
@@ -86,8 +86,21 @@
     <div class="container" data-aos="fade-up" data-aos-delay="100">  
       <div class="card-body p-0">
       <div class="table-responsive-lg ">
-        <object data="assets/pdf/pec.pdf" type="application/pdf" width="100%" height="200%">
-          
+        <table border="1" width="100%" height="600 align="center" class="tableUserInfo">
+          <tr>
+            <td align="center">
+
+            </td>
+            
+          </tr>
+            <td align="center">
+              <object width="100%" height="600 align="center" data="assets/pdf/pec.pdf" ></object>
+
+            </td>
+
+        </table>
+        <!-- <object data="assets/pdf/pec.pdf" type="application/pdf" width="100%" height="200%">
+           -->
         </object>
         <!-- <object data="assets/pdf/pec.pdf" width="500" height="400"></object>
         <iframe src="assets/pdf/pec.pdf" width="600" height="400"></iframe> -->
