--- a/pdf.html
+++ b/pdf.html
@@ -99,8 +99,8 @@
             </td>
 
         </table>
-        <!-- <object data="assets/pdf/pec.pdf" type="application/pdf" width="100%" height="200%">
-           -->
+        <object data="assets/pdf/pec.pdf" type="application/pdf" width="100%" height="200%">
+          
         </object>
         <!-- <object data="assets/pdf/pec.pdf" width="500" height="400"></object>
         <iframe src="assets/pdf/pec.pdf" width="600" height="400"></iframe> -->
