--- a/pdf.html
+++ b/pdf.html
@@ -99,7 +99,7 @@
             </td>
 
         </table>
-        <object data="assets/pdf/pec.pdf" type="application/pdf" width="100%" height="200%">
+        <object data="assets/pdf/pec.pdf" type="application/pdf" width="100%" height="600 align="center">
           
         </object>
         <!-- <object data="assets/pdf/pec.pdf" width="500" height="400"></object>
